--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="assets/styles/app.css" />
+    <script src="assets/scripts/app.js"></script>
   </head>
+
   <body>
     <header>
       <h1>The Unconventional Calculator</h1>
